@startuml dbModeling1
    Entity "tax_rate\n消費税率マスタ" as tax_rate{
        id [PK] : INT : 消費税区分ID
        --
        tax_rate : DECIMAL : 消費税率
        starts_at : DATE : 適用開始日
    }

    Entity "guest_customers\nゲスト客" as f_c {
        id [PK] : BINARY : ゲストID
        --
        name : VARCHAR : 名前
        phone_number : VARCHAR : 電話番号
        email : VARCHAR : メールアドレス
    }

    Entity "guest_used_coupons\nゲスト使用クーポン" as g_u_c{
        id [PK] : INT : ゲスト使用クーポンID
        --
        guest_customer_id [FK] : BINARY : ゲスト客ID
        coupon_id [FK] : INT : クーポンID
        used_at : DATETIME : 使用日時
    }

    Entity "customer_addresses\n顧客住所" as c_a{
        id [PK] : INT : 住所ID
        --
        customer_id [FK] : BINARY : 顧客ID
        postal_code : VARCHAR : 郵便番号
        address1 : VARCHAR : 住所1
        address2 : VARCHAR : 住所2
    }
    
    Entity "registerd_customers\n登録顧客" as r_c{
        id [PK] : BINARY : 登録顧客ID
        --
        name : VARCHAR : 名前
        phone_number : VARCHAR : 電話番号
        email : VARCHAR : メールアドレス
    }

    Entity "customer_holding_coupons\n顧客保有クーポン" as c_h_c{
        id [PK] : INT :  ID
        --
        customer_id [FK] : INT : 顧客ID
        coupon_id [FK] : INT : クーポンID
        used_at : DATETIME : 使用日時
    }

    Entity "coupons\nクーポンマスタ" as c_m{
        id [PK] : INT : クーポンID
        --
        name : VARCHAR : クーポン名称
        discount_price : INT : 割引額
        starts_at : DATETIME : 適用開始日
        ends_at : DATETIME : 適用終了日
    }

    Entity "orders\n注文票" as orders {
        id [PK] : INT : 注文ID
        --
        registered_customer_id [FK] : BINARY : 登録顧客ID
        guest_customer_id [FK] : BINARY : ゲスト顧客ID
        tax_rate_id [FK] : INT : 消費税ID
        used_coupon_id [FK] : INT : 使用クーポンID
        subtotal_price : INT : 小計金額
        total_price : INT : 合計金額
        order_method : INT : 注文方法
        postal_code : VARCHAR : 配達先郵便番号
        address1 : VARCHAR : 住所1
        address2 : VARCHAR : 住所2
        payment_method : INT : 決済方法
        ordered_at : DATETIME : 注文日時
        payed_at : DATETIME : 支払日時
    }

    Entity "order_products\n注文商品" as order_details {
        order_id [PK, FK] : INT : 注文ID 
        order_branch_number [PK] : INT : 注文枝番 
        --
        product_id [FK] : INT : 販売商品ID
        product_price : INT : 商品価格
        package_id : INT : 梱包ID 
        option_price : INT : 梱包価格
        quantity : INT : 個数
    }

    Entity "order_options\n注文オプション" as options {
        id [PK] : INT : 注文オプションID
        --
        order_id [FK] : INT : 注文ID
        order_branch_number [FK] : INT : 注文枝番
        option_id [FK] : INT : オプションID
    }

    Entity "options\nオプションマスタ" as om{
        id [PK] : INT : オプションID
        --
        name : VARCHAR : オプション名称
    }

    Entity "packages\n梱包マスタ" as p_o{
        id [PK] : INT : 梱包ID
        --
        name : VARCHAR : 梱包名称
        price : INT : 梱包代
    }

    Entity "products\n商品マスタ" as s_p{
        id [PK] : INT : 商品ID
        --
        name : VARCHAR : 商品名称
        price : INT : 値段
        tax_rate_id [FK] : 消費税ID
        sales_status : INT : 販売状況
        inserted_at : DATETIME : 登録日時
        updated_at : DATETIME : 更新日時
    }

    Entity "products_update_histories\n商品変更履歴" as p_h {
        id [PK] : INT : 商品変更履歴ID
        --
        products_id [FK] : INT : 商品ID
        name : VARCHAR : 商品名称
        price : INT : 値段
        tax_rate_id [FK] : 消費税ID
        sales_status : INT : 販売状況
        product_inserted_at : DATETIME : 商品登録日時
        product_updated_at : DATETIME : 商品更新日時
    }

    Entity "set_details\nセット詳細" as s_d{
        id [PK] : INT : セット詳細ID
        --
        set_id [FK] : INT : 商品ID
        sushi_id [FK] : INT : 寿司ID
    }

    Entity "categories\nカテゴリーマスタ" as c {
        id [PK] : INT : カテゴリーID
        --
        name : VARCHAR : カテゴリー名称
    }

    Entity "product_categories\n商品カテゴリー" as pc {
        id [PK] : INT : 商品カテゴリーID
        --
        product_id [FK] : INT : 商品ID
        category_id [FK] : INT : カテゴリーID
    }

    orders }o..r..|| f_c
    r_c ||....o{ orders
    orders ||-d-|{ order_details
    orders }o-l-|| tax_rate
    order_details }o--|| s_p
    tax_rate ||--o{ s_p
    tax_rate ||--o{ p_h
    s_p ||..o{ pc
    pc }o..|| c
    s_p ||..o{ s_d
    order_details ||..o{ options
    options }o..|| om
    s_p ||..l..o{ p_h 
    order_details }o..|| p_o
    ' p_o ||..o{ p_o_h
    r_c ||..o{ c_h_c
    ' f_c ||..o{ g_u_c
    g_u_c }o..|| f_c
    c_m ||..o{ c_h_c
    c_m ||..o{ g_u_c
    c_m |o..o{ orders
    c_a }|.r.|| r_c


    ' * 主キー
    ' + 外部キー
    ' カラム名 : 型 : 説明

    ' 1対０また1
    ' A ||--o| B
    ' 1対1
    ' A ||--|| B
    ' 1対0以上
    ' A ||--o{ B
    ' 1対1以上
    ' A ||--|{ B

@enduml
